# Bathymetric-GNN

./: CHANGELOG.md  LICENSE  README.md  __init__ (1).py  __init__ (3).py  environment.yml  gnn.py  install.bat  install.sh  loaders.py  losses.py  prepare_ground_truth.py  pyproject.toml  test_pipeline.py  tiling.py
config/: __init__.py  config.py  constants.py
data/: __init__.py  graph_construction.py  loaders.py  synthetic_noise.py  tiling.py  vr_bag.py
docs/: CHANGELOG.md  HOW_IT_WORKS.md  LESSONS_LEARNED.md  QUICK_REFERENCE.md  TRAINING_DASHBOARD.md  TRAINING_PLAN.md
models/: __init__.py  gnn.py  pipeline.py
scripts/: diagnose_tiles.py  evaluate_model.py  extract_s57_features.py  inference.py  inference_native.py  inference_vr_native.py  prepare_ground_truth.py  test_pipeline.py  train.py
training/: __init__.py  losses.py  trainer.py
training_performance/: index.html  training_performance_dashboard.html
