[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "bathymetric-gnn"
version = "0.9.0"
description = "Graph Neural Network for bathymetric noise detection and correction"
requires-python = ">=3.9"
license = {text = "TBD"}

[tool.setuptools.packages.find]
include = ["config*", "data*", "models*", "training*"]
